Fixed code block overflow bug.

--- a/styles/default.css
+++ b/styles/default.css
@@ -119,10 +119,10 @@ code {
 
 pre {
   padding: 0.8rem 1.1rem;
+  overflow: auto;
 }
 
 pre code {
-  display: block;
   padding: 0em;
   line-height: 1.5em;
   white-space: pre;
